fix: remove horizontal overflow (#27)
* chore: remove fixed width

* chore: remove overflow

* chore: move to overall theme

--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -22,7 +22,7 @@
 }
 
 .content {
-    width: 100%;
+    width: -webkit-fill-available;;
   
     @media #{$breakpoint-small} {
       margin: 20px;
@@ -61,7 +61,7 @@
     margin: 0 !important;
     box-shadow: none !important;
     border-radius: unset !important;
-    width: 100% !important;
+    width: -webkit-fill-available !important;
     max-height: 350px;
   }
 
